# trace-python

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  lint-pr.yml  release.yml
src/securewithtrace/: __init__.py
src/securewithtrace/webhooks/: __init__.py  events.py  exceptions.py  handler.py
src/trace_python/: __init__.py
src/trace_python/webhooks/: __init__.py  events.py  handler.py
src/tracepy/: __init__.py
src/tracepy/webhooks/: __init__.py  events.py  handler.py
tests/: test_webhooks.py
trace-python/: .gitignore  README.md  pyproject.toml
trace-python/tests/: conftest.py  test_webhooks.py
trace-python/trace/: __init__.py
trace-python/trace/api/: __init__.py  client.py
trace-python/trace/webhooks/: __init__.py  events.py  handler.py
