[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trace-python"
version = "0.1.0"
description = "Python SDK for the Trace security platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
addopts = "--cov=trace_python --cov-report=term-missing --import-mode=importlib"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
mypy_path = "src"
packages = ["trace_python"]

[tool.hatch.build.targets.wheel]
packages = ["src/trace_python"]
